--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Enter-tainer/typst-preview"
   },
-  "version": "0.10.8",
+  "version": "0.11.0-rc1",
   "engines": {
     "vscode": "^1.77.0"
   },
