--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,6 +31,7 @@ jobs:
           curl -L https://github.com/Myriad-Dreamin/typst-book/releases/download/v0.1.2/font-assets.tar.gz | tar -xvz -C assets/fonts
           curl -L https://use.fontawesome.com/releases/v6.4.2/fontawesome-free-6.4.2-desktop.zip -o fontawesome-free-6.4.2-desktop.zip
           unzip fontawesome-free-6.4.2-desktop.zip
+          mkdir -p assets/fonts/
           cp -v -r fontawesome-free-6.4.2-desktop/otfs/* assets/fonts/
       - name: Download & install typst-book
         run: |
