--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "typst-preview"
-version = "0.11.0-rc1"
+version = "0.10.9"
 authors = ["The Typst Project Developers"]
 edition = "2021"
 build = "build.rs"
