--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "typst-preview"
+description = "A previewer for the Typst typesetting system."
+license = "MIT"
+repository = "https://github.com/Enter-tainer/typst-preview"
 version = "0.11.0"
 authors = ["The Typst Project Developers"]
 edition = "2021"
 build = "build.rs"
-include = ["src/**/*", "src/index.html", "LICENSE", "README.md", "build.rs"]
+keywords = ["typst"]
+include = ["src/**/*", "/LICENSE", "/README.md", "build.rs"]
+
 [[bin]]
 name = "typst-preview"
 required-features = ["cli"]
