--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -176,8 +176,9 @@ jobs:
       - name: Upload frontend html
         uses: actions/upload-artifact@v4
         with:
-          name: frontend
+          name: index.html
           path: addons/vscode/out/frontend/index.html
+          overwrite: true
 
   build_alpine:
     name: build (x86_64-unknown-linux-musl)
