chore: bump to v0.11.0 (#273)
* chore: bump to v0.11.0

* feat: allow disable html embed

* ci: upload html

* fix build and use crates

* change html default path to help crates io publish

* make windows happy

* add packaging

* real html

* docs: add about crates io

--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Enter-tainer/typst-preview"
   },
-  "version": "0.10.10",
+  "version": "0.11.0",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -237,7 +237,7 @@
     ]
   },
   "scripts": {
-    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && cpr ../frontend/dist/ ./out/frontend/",
+    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && cpr ../frontend/dist/ ./out/frontend/ && rimraf ../../src/index.html && cpr ./out/frontend/index.html ../../src/index.html",
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./ && yarn run build:frontend",
     "build": "yarn run compile",
