chore: bump to 0.11.3 and fix vscode build script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,9 +28,10 @@
 		},
 		{
 			"label": "Build Binary",
-			"type": "cargo",
-			"command": "build",
+			"type": "shell",
+			"command": "cargo",
 			"args": [
+				"build",
 				"--profile=release"
 			],
 			"problemMatcher": [
