--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -176,6 +176,13 @@ jobs:
           name: index.html
           path: addons/vscode/out/frontend/index.html
           overwrite: true
+      - name: Publish crates
+        if: matrix.platform == 'linux' && matrix.arch == 'x64' && startsWith(github.ref, 'refs/tags/')
+        uses: katyo/publish-crates@v2
+        with:
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+          args: "--allow-dirty"
+
 
   build_alpine:
     name: build (x86_64-unknown-linux-musl)
