--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,10 +178,7 @@ jobs:
           overwrite: true
       - name: Publish crates
         if: matrix.platform == 'linux' && matrix.arch == 'x64' && startsWith(github.ref, 'refs/tags/')
-        uses: katyo/publish-crates@v2
-        with:
-          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-          args: "--allow-dirty"
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} --allow-dirty
 
 
   build_alpine:
