chore: bump to v0.11.4

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -270,6 +270,7 @@ jobs:
           omitDraftDuringUpdate: true
           omitNameDuringUpdate: true
           omitPrereleaseDuringUpdate: true
+          bodyFile: "addons/vscode/CHANGELOG.md"
 
   publish:
     runs-on: ubuntu-latest
