--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -4,6 +4,7 @@
   "description": "preview your typst document in instant",
   "publisher": "mgt19937",
   "license": "MIT",
+  "icon": "./preview-logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Enter-tainer/typst-preview"
