--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -150,7 +150,7 @@
         "typst-preview.systemFonts": {
           "type": "boolean",
           "default": true,
-          "description": "A flag to determines whether to load system font."
+          "description": "A flag to determine whether to load system fonts."
         },
         "typst-preview.fontPaths": {
           "type": "array",
