--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -150,7 +150,7 @@
         "typst-preview.systemFonts": {
           "type": "boolean",
           "default": true,
-          "description": "A flag to determine whether to load system fonts."
+          "description": "Whether to load system fonts. If disabled, only fonts in `typst-preview.fontPaths` is loaded"
         },
         "typst-preview.fontPaths": {
           "type": "array",
