feat: option to ignore system fonts when previewing (#299)
* feat: option to ignore system fonts when previewing

* chore: disable vscode variable in sysInputs

* feat: remove ignore in configuration name

* chore: minor word fix

* Update addons/vscode/package.json

---------

Co-authored-by: Wenzhuo Liu <mgt@oi-wiki.org>

--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -147,6 +147,11 @@
           "default": {},
           "description": "key-value pairs visible through `sys.inputs`, corresponds to `--input` argument of typst cli"
         },
+        "typst-preview.systemFonts": {
+          "type": "boolean",
+          "default": true,
+          "description": "Whether to load system fonts. If disabled, only fonts in `typst-preview.fontPaths` is loaded"
+        },
         "typst-preview.fontPaths": {
           "type": "array",
           "items": {
