--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,10 +146,6 @@ jobs:
           cp "target/${{ matrix.rust-target }}/gh-release/tinymist$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )" "editors/vscode/out/"
           cp "target/${{ matrix.rust-target }}/gh-release/tinymist$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )" "contrib/typst-preview/editors/vscode/out/"
           cp "target/${{ matrix.rust-target }}/gh-release/tinymist$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )" "tinymist-${{ env.target }}$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )"
-      - name: Test tinymist
-        run: |
-          cargo test --profile=gh-release --workspace --target ${{ matrix.rust-target }}
-        if: (startsWith(github.ref, 'refs/tags/') || matrix.regular_build == 'true') && (matrix.platform == 'linux') && (matrix.arch == 'x64')
       - name: Upload split debug symbols for windows
         if: matrix.platform == 'win32' && (startsWith(github.ref, 'refs/tags/') || matrix.regular_build == 'true')
         uses: actions/upload-artifact@v4
@@ -213,9 +209,9 @@ jobs:
     steps:
       - name: Install dependencies
         run: apk add --no-cache git clang lld musl-dev nodejs npm yarn binutils
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
+          repository: Myriad-Dreamin/tinymist
           submodules: recursive
       - name: Run rust-cache
         uses: Swatinem/rust-cache@v2
@@ -282,6 +278,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          repository: Myriad-Dreamin/tinymist
           submodules: recursive
       - uses: actions/download-artifact@v4
         with:
